--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    //core
+    implementation 'com.github.kittinunf.fuel:fuel:2.1.0'
+
+    //packages
+    implementation 'com.github.kittinunf.fuel:fuel-gson:2.1.0'
+    implementation 'com.github.kittinunf.fuel:fuel-android:2.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
