app loading and displaying query results and item click display working

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,12 @@ dependencies {
     //core
     implementation 'com.github.kittinunf.fuel:fuel:2.1.0'
 
-    //packages
+    //packages http client
     implementation 'com.github.kittinunf.fuel:fuel-gson:2.1.0'
     implementation 'com.github.kittinunf.fuel:fuel-android:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
