--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // Anko SQLite
+    implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
+    // Anko Commons
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
